# claw-agent

./: .gitignore  AGENTS.md  README.md  claw_bootstrap.py  pyproject.toml  test_models_implementation.py
.kiro/specs/claw-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/claw-gateway/: .config.kiro  design.md  requirements.md  tasks.md
agent/: __init__.py  compressor.py  config.py  guardrails.py  llm_client.py  loop.py  messages.py  persistence.py  skills.py  subagent.py  title_generator.py  tool_dispatch.py  tool_registry.py  tracing.py  tui.py
cli/: __init__.py  chat_cmd.py  config.py  gateway_cmd.py  interactive_ui.py  main.py  models.py  models_cmd.py  providers.py  skills_cmd.py  subagent_cmd.py
cli/personas/: python-review.md
cli/skills/gateway-setup/: SKILL.md
cli/skills/nous-setup/: SKILL.md
cli/skills/openrouter-setup/: SKILL.md
docs/superpowers/plans/: 2026-06-19-skill-tools.md
docs/superpowers/specs/: 2026-06-19-skill-tools-design.md
gateway/: __init__.py  config.py  mcp_client.py  platform_base.py  server.py  weixin.py
tests/: conftest.py  test_gateway_cmd.py  test_gateway_config.py  test_mcp_call_tool.py  test_mcp_client.py  test_mcp_manager_find_tool.py
tests/agent/: conftest.py  strategies.py  test_skills.py
